--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,13 @@
 {
+  "version": 2,
   "functions": {
-    "api/*.py": {
-      "runtime": "python3.9"
+    "api/index.py": {
+      "runtime": "vercel-python@0.5.0"
     }
   },
   "routes": [
     {
-      "src": "/(.*)",
+      "src": "/.*",
       "dest": "api/index.py"
     }
   ]
