node.js vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/index.py": {
-      "runtime": "vercel-python@0.5.0"
-    }
-  },
+  "builds": [
+    { "src": "api/index.js", "use": "@vercel/node" }
+  ],
   "routes": [
-    {
-      "src": "/.*",
-      "dest": "api/index.py"
-    }
+    { "src": "/(.*)", "dest": "api/index.js" }
   ]
 }
