--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,10 @@
     { "src": "api/**/*.ts", "use": "@vercel/node" },
     { "src": "api/**/*.js", "use": "@vercel/node" },
     { "src": "public/**/*", "use": "@vercel/static" }
+  ],
+  "routes": [
+    { "src": "/api/keepAlive", "dest": "api/keepAlive.ts" },
+    { "src": "/api/(.*)", "dest": "api/$1.js" },
+    { "src": "/(.*)", "dest": "public/$1" }
   ]
 }
