--- a/vercel.json
+++ b/vercel.json
@@ -9,5 +9,17 @@
     { "src": "/api/keepAlive", "dest": "api/keepAlive.ts" },
     { "src": "/api/(.*)", "dest": "api/$1.js" },
     { "src": "/(.*)", "dest": "public/$1" }
+  ],
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "X-Frame-Options", "value": "ALLOWALL" },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self' https://www.smartalk.online https://sites.google.com;"
+        }
+      ]
+    }
   ]
 }
